<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/row"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="Row"
            android:inputType="numberSigned"
            android:lines="1"
            android:maxLength="2" />

        <EditText
            android:id="@+id/col"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="column"
            android:inputType="numberSigned"
            android:lines="1"
            android:maxLength="2" />

        <Button
            android:id="@+id/gen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Matrix"
            android:onClick="generateMatrix"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <HorizontalScrollView
                    android:id="@+id/tab"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TableLayout
                        android:id="@+id/matrix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></TableLayout>

                </HorizontalScrollView>

                <LinearLayout
                    android:id="@+id/result"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tab"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/get_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ShortestPath"
                        android:onClick="getResult"
                        />

                    <TextView
                        android:id="@+id/results"
                        android:layout_width="fill_parent"

                        android:layout_height="wrap_content" />

                </LinearLayout>


            </RelativeLayout>


        </ScrollView>

    </RelativeLayout>

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="clear"
        android:text="Clear Matrix" />
</LinearLayout>