<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:id="@+id/value_heading"/>

    <EditText
        android:layout_width="wrap_content"
        android:ems="10"
        android:lines="1"
        android:maxLength="3"
        android:id="@+id/input_e"
        android:layout_height="wrap_content"
        />
<Button
    android:layout_width="wrap_content"
    android:text="Set Node"
    android:id="@+id/set_node"
    android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:text="Cancel"
        android:id="@+id/set_cancel"
        android:layout_height="wrap_content" />

</LinearLayout>